# openai-proxy

./: .gitignore  Cargo.toml  README.md
docs/: llama_to_openai_error_mapping.md
examples/: simple_proxy.rs
src/: backend.rs  lib.rs  server.rs  types.rs
src/llama/: error.rs  mod.rs
tests/: integration.rs  llama_integration.rs  llama_live_integration.rs
